# esp32-badge-doorbell

./: .gitignore  CLAUDE.md  LICENSE  README.md
docs/: hardware-assumptions.md  recover-original-firmware.md  roadmap.md
firmware/: README.md
firmware/native-esp32/: CMakeLists.txt  README.md  partitions_ota.csv  sdkconfig.defaults
firmware/native-esp32/main/: CMakeLists.txt  badge_build_info.h.in  badge_button.c  badge_button.h  badge_config.h.example  badge_i2c.c  badge_i2c.h  badge_led.c  badge_led.h  badge_nav.c  badge_nav.h  badge_nightmode.c  badge_nightmode.h  badge_power.c  badge_power.h  badge_server.c  badge_server.h  badge_state.c  badge_state.h  badge_touch.c  badge_touch.h  gpio_debug.c  gpio_debug.h  log_ship.c  log_ship.h  main.c  ota_config.h.example  ota_update.c  ota_update.h  recovery_boot.c  recovery_boot.h  recovery_config.h  recovery_main.c  sd_recovery.c  sd_recovery.h  tr19_epaper.c  tr19_epaper.h  wifi_connect.c  wifi_connect.h
tools/: README.md  backup-original.sh  badge.py  build-firmware.sh  build-recovery-firmware.sh  detect-bootloader.sh  esp-idf-env.sh  flash-bootstrap.sh  flash-firmware.sh  log-server.py  ota-server.py  prepare-sd-update.sh  probe-flash-connections.sh  restore-original.sh  serial-log.py
